<resources>
    <string name="app_name">SoulCentric</string>
    <string name="facebook_app_id">512137359198691</string>
    <string name="fb_login_protocol_scheme">fb512137359198691</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_name">Full Name</string>
    <string name="prompt_login">Already have a member? <b><font color='#0000FF'>Log in</font></b> </string>

</resources>
